# STS1_COBC_SW

./: .clang-format  .clang-tidy  .clangd  .cmake-format.py  .codespell-ignore  .codespellrc  .gitignore  CMakeDeveloperPresets.json  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  clear  dsdssss  iwyu.imp  radio_config_Si4463.h  todos
Source/: CMakeLists.txt  HelloWorld.cpp  Lib.cpp  Lib.hpp
Sts1CobcSw/: CMakeLists.txt  CobcCommands.cpp  CobcCommands.hpp  CommandParser.cpp  CommandParser.hpp  CommandParserThread.cpp  CommandParserThread.hpp  Dummy.cpp  Dummy.hpp  EduCommunicationErrorThread.cpp  EduCommunicationErrorThread.hpp  EduHeartBeatThread.cpp  EduHeartbeatThread.cpp  EduListenerThread.cpp  EduListenerThread.hpp  EduPowerManagementThread.cpp  EduProgramQueue.cpp  EduProgramQueue.hpp  EduProgramQueueThread.cpp  EduProgramQueueThread.hpp  EduProgramStatusHistory.cpp  EduProgramStatusHistory.hpp  EmptyEduProgramQueue.cpp  FlashStartupTestThread.cpp  FlashStartupTestThread.hpp  FramEpsStartupTestThread.cpp  FramEpsStartupTestThread.hpp  HafBeaconThread.cpp  HafEduProgramQueue.cpp  HardCodedEduProgramQueue.hpp  HelloDummy.cpp  HelloSerial.cpp  LoopedEduProgramQueue.cpp  LoopedEduProgramQueue.hpp  MftBeaconThread.cpp  MftEduProgramQueue.cpp  MftMorseThread.cpp  MorseThread.cpp  RfStartupTestThread.cpp  SpiStartupTestAndSupervisorThread.cpp  (+8 more)
Sts1CobcSw/Blake2s/: BLAKE2s.cpp  BLAKE2s.h  Blake2s.cpp  Blake2s.hpp  Blake2sWrapper.cpp  CMakeLists.txt  Crypto.h  EndianUtil.h  Hash.h  ProgMemUtil.h
Sts1CobcSw/Bootloader/: BusyWait.cpp  BusyWait.hpp  CMakeLists.txt  CobcBootloader.ld  DebugPrint.hpp  Fram.cpp  Fram.hpp  Leds.cpp  Leds.hpp  Main.cpp  MemoryInitialization.cpp  PersistentVariables.hpp  PersistentVariables.ipp  Print.cpp  Print.hpp  RunFirmware.cpp  RunFirmware.hpp  Spi.cpp  Spi.hpp  Startup.s  Toolchain.cmake  UciSpi.cpp  UciSpi.hpp  UciUart.cpp  UciUart.hpp  Utilities.cpp  Utilities.hpp
Sts1CobcSw/ChannelCoding/: CMakeLists.txt  ChannelCoding.cpp  ChannelCoding.hpp  Configuration.hpp  ReedSolomon.cpp  ReedSolomon.hpp  Scrambler.cpp  Scrambler.hpp
Sts1CobcSw/CmsisDevice/: stm32f411xe.h
Sts1CobcSw/CobcSoftware/: CMakeLists.txt  CommandParser.cpp  CommandParserThread.cpp  EduCommunicationErrorThread.cpp  EduCommunicationErrorThread.hpp  EduHeartbeatThread.cpp  EduListenerThread.cpp  EduPowerManagementThread.cpp  EduProgramQueueThread.cpp  FirmwareCrcSupervisorThread.cpp  FirmwareCrcSupervisorThread.hpp  FlashStartupTestThread.cpp  FramEpsStartupTestThread.cpp  RfCommunicationThread.cpp  RfStartupTestThread.cpp  RfStartupTestThread.hpp  SpiStartupTestAndSupervisorThread.cpp  SpiStartupTestAndSupervisorThread.hpp  StartupTestStubs.cpp  StartupTestThreadStubs.cpp  TelemetryCollection.cpp  TelemetryCollection.hpp  TelemetryThread.cpp  ThreadPriorities.hpp  TopicsAndSubscribers.cpp  TopicsAndSubscribers.hpp
Sts1CobcSw/CobcSw/: CMakeLists.txt  CommandParser.cpp  CommandParserThread.cpp  EduCommunicationErrorThread.cpp  EduHeartbeatThread.cpp  EduListenerThread.cpp  EduPowerManagementThread.cpp  EduProgramQueueThread.cpp  FlashStartupTestThread.cpp  FramEpsStartupTestThread.cpp  RfStartupTestThread.cpp  SpiStartupTestAndSupervisorThread.cpp  TopicsAndSubscribers.cpp
Sts1CobcSw/Edu/: CMakeLists.txt  Edu.cpp  Edu.hpp  EduMock.cpp  Enums.hpp  Names.hpp  ProgramQueue.cpp  ProgramQueue.hpp  ProgramStatusHistory.cpp  ProgramStatusHistory.hpp  Structs.cpp  Structs.hpp  Structs.ipp  Types.hpp  Types.ipp
Sts1CobcSw/ErrorDetectionAndCorrection/: CMakeLists.txt  EdacVariable.hpp  EdacVariable.ipp  ErrorDetectionAndCorrection.cpp  ErrorDetectionAndCorrection.hpp
Sts1CobcSw/FileSystem/: CMakeLists.txt  DirectoryIterator.cpp  DirectoryIterator.hpp  ErrorsAndResult.hpp  File.cpp  File.hpp  File.ipp  FileSystem.cpp  FileSystem.hpp  FileSystem.ipp  LfsFlash.cpp  LfsMemoryDevice.hpp  LfsRam.cpp  LfsRam.hpp  LfsStorageDevice.hpp  LfsWrapper.cpp  LfsWrapper.hpp  LfsWrapper.ipp
Sts1CobcSw/Firmware/: AntennaDeploymentThread.cpp  CMakeLists.txt  CommandParser.cpp  CommandParser.hpp  CommandParserThread.cpp  EduCommunicationErrorThread.cpp  EduCommunicationErrorThread.hpp  EduHeartbeatThread.cpp  EduListenerThread.cpp  EduPowerManagementThread.cpp  EduPowerManagementThread.hpp  EduProgramQueueThread.cpp  EduProgramQueueThread.hpp  EduProgramTransferThread.cpp  FileTransferThread.cpp  FileTransferThread.hpp  FlashStartupTestThread.cpp  FramEpsStartupTestThread.cpp  RfCommunicationThread.cpp  RfCommunicationThread.hpp  RfStartupTestThread.cpp  SpiStartupTestAndSupervisorThread.cpp  SpiStartupTestAndSupervisorThread.hpp  StartupAndSpiSupervisorThread.cpp  StartupAndSpiSupervisorThread.hpp  StartupTestThreadStubs.cpp  TelemetryThread.cpp  ThreadPriorities.hpp  TopicsAndSubscribers.cpp  TopicsAndSubscribers.hpp  WatchdogAndAntennaDeploymentThread.cpp
Sts1CobcSw/FirmwareManagement/: CMakeLists.txt  FirmwareManagement.cpp  FirmwareManagement.hpp
Sts1CobcSw/Flash/: CMakeLists.txt  Flash.cpp  Flash.hpp  FlashMock.cpp  FlashMock.hpp
Sts1CobcSw/Fram/: CMakeLists.txt  Fram.cpp  Fram.hpp  Fram.ipp  FramMock.cpp  FramMock.hpp
Sts1CobcSw/FramSections/: CMakeLists.txt  FramLayout.hpp  FramRingArray.hpp  FramRingArray.ipp  FramVector.hpp  FramVector.ipp  PersistentVariableInfo.hpp  PersistentVariables.hpp  PersistentVariables.ipp  ProgramQueue.hpp  ProgramQueue.ipp  RingArray.hpp  RingArray.ipp  Section.hpp  Section.ipp  SubsectionInfo.hpp  Subsections.hpp  Subsections.ipp
Sts1CobcSw/Hal/: CMakeLists.txt  Communication.cpp  Communication.hpp  Communication.ipp  Gpio.cpp  Gpio.hpp  GpioPin.cpp  GpioPin.hpp  GpioPin.ipp  HardwareSpi.cpp  HardwareSpi.hpp  HardwareSpis.cpp  IoNames.hpp  PinNames.hpp  Spi.cpp  Spi.hpp  Spi.ipp  SpiMock.cpp  SpiMock.hpp  SpiMocks.cpp  Spis.cpp  Spis.hpp  Uart.cpp  Uart.hpp  Uart.ipp
Sts1CobcSw/Mailbox/: CMakeLists.txt  Mailbox.hpp  Mailbox.ipp
Sts1CobcSw/Outcome/: CMakeLists.txt  Outcome.hpp  Outcome.ipp
Sts1CobcSw/Periphery/: AdcSensors.cpp  (+56 more)
Test/: CMakeLists.txt
Tests/: .clang-format  .clang-tidy  CMakeLists.txt
test/: CMakeLists.txt
(+396 files in other folders)
